# market-observer

./: .env.example  .gitignore  2026-03-01_structural.md  2026-03-02_structural.md  2026-03-03_structural.md  2026-03-04_structural.md  2026-03-05_structural.md  2026-03-06_structural.md  2026-03-07_structural.md  2026-03-07_weekly.md  2026-03-08_structural.md  2026-03-09_structural.md  2026-03-10_structural.md  2026-03-11_structural.md  2026-03-12_structural.md  2026-03-13_structural.md  2026-03-14_structural.md  2026-03-14_weekly.md  2026-03-15_structural.md  2026-03-16_structural.md  2026-03-17_structural.md  2026-03-18_structural.md  2026-03-19_structural.md  2026-03-20_structural.md  2026-03-21_structural.md  2026-03-21_weekly.md  2026-03-22_structural.md  2026-03-23_structural.md  2026-03-24_structural.md  2026-03-25_structural.md  2026-03-26_structural.md  2026-03-27_structural.md  2026-03-28_structural.md  2026-03-28_weekly.md  2026-03-29_structural.md  CLAUDE.md  Dockerfile  _config.yml  index.md  pyproject.toml
app/: __init__.py  __main__.py  config.py  database.py  models.py
configs/: config.yaml
docs/: ARCHITECTURE.md  PRD.md  REPORT_READING_GUIDE.md  design_v10_transition_reliability.md  design_v2_narrative_reliability.md  design_v3_self_verification.md  design_v4_statistical_baseline.md  design_v5_weekly_quality.md  design_v6_monthly_narrative.md  design_v7_market_response.md  design_v8_direction_aware.md  design_v9_global_market.md  design_v9_narrative_observatory.md
reports/: 2025-12-22_monthly.md  2026-01-22_monthly.md  2026-02-21_structural.md  (+8 more)
(+88 files in other folders)
